<resources>
    <string name="app_name">LoginTest</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create account</string>
    <string name="confirm">Confirm</string>
    <string name="loading">Loading...</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="cancel">Cancel</string>
</resources>